--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     async function main() {
       
       await liff.init({ liffId: "2001362093-0qY6xqp6" })
-       getEnvironment()
+       getEnvironment();
       // getUserProfile()
       // getContext()
       // getFriendship()
