--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
     console.log("Hello World!")
   </script> -->
 
-  <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script> 
+  <!--<script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script> -->
+  <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
   <script>
     function createUniversalLink() {
     }
