--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     function getEnvironment() {
       document.getElementById("os").append(liff.getOS())
-      document.getElementById("language").append(lift.getLanguage())
+      document.getElementById("language").append("TTTTTTT")
       document.getElementById("version").append(lift.getVersion())
       document.getElementById("accessToken").append(lift.getAccessToken())
       document.getElementById("isInClient").append(lift.isInClient())
