--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/style.css" media="all">
 </head>
 <body>
+  <!-- 
   <p id="os"><b>OS:</b> </p>
   <p id="language"><b>Language:</b> </p>
   <p id="version"><b>Version:</b> </p>
@@ -35,6 +36,8 @@
   <button id="btnScanCode" onclick="scanCode()">Scan Code</button>
   <button id="btnLogOut" onclick="logOut()">Log Out</button>
   <button id="btnClose" onclick="closed()">Close</button>
+
+  -->
 
   <!-- <script src="js/vconsole.min.js"></script> -->
   <!-- <script>
@@ -80,6 +83,8 @@
       document.getElementById("userId").append(profile.userId)
       document.getElementById("statusMessage").append(profile.statusMessage)
       document.getElementById("displayName").append(profile.displayName)
+      alert("ttt"+profile.userId)
+      
 
     }
 
@@ -98,8 +103,8 @@
       //  getUserProfile()
       //});
 
-       getEnvironment();
-       getUserProfile()
+      // getEnvironment();
+        getUserProfile()
       // getContext()
       // getFriendship()
       // createUniversalLink()
