--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
       
       const profile = await liff.getProfile()
 
-      document.getElementById("pictureUrl").src = profile.pictureUrl
-      document.getElementById("userId").append(profile.userId)
-      document.getElementById("statusMessage").append(profile.statusMessage)
-      document.getElementById("displayName").append(profile.displayName)
+     // document.getElementById("pictureUrl").src = profile.pictureUrl
+     // document.getElementById("userId").append(profile.userId)
+     // document.getElementById("statusMessage").append(profile.statusMessage)
+      //document.getElementById("displayName").append(profile.displayName)
       alert("ttt"+profile.userId)
       
 
