--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/style.css" media="all">
 </head>
 <body>
+  <p id="userId"><b>userId:</b> </p>
   <!-- 
   <p id="os"><b>OS:</b> </p>
   <p id="language"><b>Language:</b> </p>
@@ -80,7 +81,7 @@
       const profile = await liff.getProfile()
 
      // document.getElementById("pictureUrl").src = profile.pictureUrl
-     // document.getElementById("userId").append(profile.userId)
+      document.getElementById("userId").append(profile.userId)
      // document.getElementById("statusMessage").append(profile.statusMessage)
       //document.getElementById("displayName").append(profile.displayName)
       alert("ttt"+profile.userId)
@@ -89,11 +90,11 @@
     }
 
     function getEnvironment() {
-      document.getElementById("os").append(liff.getOS())
-      document.getElementById("language").append(liff.getLanguage())
-      document.getElementById("version").append(liff.getVersion())
-      document.getElementById("accessToken").append(liff.getAccessToken())
-      document.getElementById("isInClient").append(liff.isInClient())
+     // document.getElementById("os").append(liff.getOS())
+     // document.getElementById("language").append(liff.getLanguage())
+     // document.getElementById("version").append(liff.getVersion())
+     // document.getElementById("accessToken").append(liff.getAccessToken())
+     // document.getElementById("isInClient").append(liff.isInClient())
     }
 
     async function main() {
