--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 
     async function getUserProfile() {
       
-      const profile = await liff.getProfile()
+     // const profile = await liff.getProfile()
 
-      document.getElementById("pictureUrl").src = profile.pictureUrl
-      document.getElementById("userId").append(profile.userId)
-      document.getElementById("statusMessage").append(profile.statusMessage)
-      document.getElementById("displayName").append(profile.displayName)
+     // document.getElementById("pictureUrl").src = profile.pictureUrl
+     // document.getElementById("userId").append(profile.userId)
+     // document.getElementById("statusMessage").append(profile.statusMessage)
+     // document.getElementById("displayName").append(profile.displayName)
       
      // xhttp.open("GET", "http://localhost:8090/jdj/LineUserID.jsp?userId=12345");
      // const res = await fetch('http://localhost:8080/jdj/LineUserID.jsp?userId=thirapat')
