--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
      // xhttp.open("GET", "http://localhost:8090/jdj/LineUserID.jsp?userId=12345");
      // const res = await fetch('http://localhost:8080/jdj/LineUserID.jsp?userId=thirapat')
       //document.getElementById("userId").append("12345")
-      const res = await fetch('http://jordeejing.ddns.net/:8090/jdj/LineUserID.jsp?userId=thirapat')
+    //  const res = await fetch('http://jordeejing.ddns.net/:8090/jdj/LineUserID.jsp?userId=thirapat')
 
     }
 
