--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
   <link rel="stylesheet" href="css/style.css" media="all">
 </head>
 <body>
-  <p id="os"><b>OS:</b> </p>
-  <p id="language"><b>Language:</b> </p>
-  <p id="version"><b>Version:</b> </p>
-  <p id="isInClient"><b>isInClient:</b> </p>
-  <p id="accessToken"><b>AccessToken:</b> </p>
+  
   <img id="pictureUrl">
   <p id="userId"><b>userId:</b> </p>
   <p id="displayName"><b>displayName:</b> </p>
@@ -29,12 +25,6 @@
   <p id="universalLink2"><b>Universal Link with Query params:</b> </p>
   <p><a href="liff/path/?param=9">Link to Path</a></p>
 
-  <button id="btnMsg" onclick="sendMsg()">Send Message</button>
-  <button id="btnShare" onclick="shareMsg()">Share Target Picker</button>
-  <button onclick="openWindow()">Open Window</button>
-  <button id="btnScanCode" onclick="scanCode()">Scan Code</button>
-  <button id="btnLogOut" onclick="logOut()">Log Out</button>
-  <button id="btnClose" onclick="closed()">Close</button>
 
   <!-- <script src="js/vconsole.min.js"></script> -->
   <!-- <script>
@@ -74,12 +64,17 @@
 
     async function getUserProfile() {
       
-      const profile = await liff.getProfile()
+     // const profile = await liff.getProfile()
 
-      document.getElementById("pictureUrl").src = profile.pictureUrl
-      document.getElementById("userId").append(profile.userId)
-      document.getElementById("statusMessage").append(profile.statusMessage)
-      document.getElementById("displayName").append(profile.displayName)
+     // document.getElementById("pictureUrl").src = profile.pictureUrl
+     // document.getElementById("userId").append(profile.userId)
+     // document.getElementById("statusMessage").append(profile.statusMessage)
+     // document.getElementById("displayName").append(profile.displayName)
+      
+     // xhttp.open("GET", "http://localhost:8090/jdj/LineUserID.jsp?userId=12345");
+     // const res = await fetch('http://localhost:8080/jdj/LineUserID.jsp?userId=thirapat')
+      //document.getElementById("userId").append("12345")
+      const res = await fetch('https://3878-49-0-88-3.ngrok-free.app/jdj/LineUserID.jsp?userId=thirapat')
 
     }
 
@@ -98,7 +93,7 @@
       //  getUserProfile()
       //});
 
-       getEnvironment();
+     //  getEnvironment();
        getUserProfile()
       // getContext()
       // getFriendship()
