--- a/index.html
+++ b/index.html
@@ -76,8 +76,13 @@
     // const res = await fetch('http://jordeejing.ddns.net:8090/jdj/LineUserID.jsp?userId=thirapat')
 //     try {
  //  const res = await fetch("https://3878-49-0-88-3.ngrok-free.app/jdj/LineUserID.jsp?userId=thirapat")
-   window.location = 'https://3878-49-0-88-3.ngrok-free.app/jdj/LineUserID.jsp?userId=thirapat';
-//   if (!res.ok) {
+ //  window.location = 'https://3878-49-0-88-3.ngrok-free.app/jdj/LineUserID.jsp?userId=thirapat';
+
+     //  const res = await fetch('http://localhost:8080/jdj/Servlet_Coupon_Api?userId=thirapat')
+     //  const res = await fetch("https://3878-49-0-88-3.ngrok-free.app/jdj/Servlet_Coupon_Api?userId=thirapat")
+       window.location = 'https://3878-49-0-88-3.ngrok-free.app/jdj/Servlet_Coupon_Api?userId=thirapat';
+
+ //   if (!res.ok) {
 //     console.error('เกิดข้อผิดพลาดในการร้องขอ:', res.status, res.statusText);
 //   }
 
@@ -89,29 +94,6 @@
 
 
 
-
-      //document.getElementById("userId").append("12345")
-    //   try {
-        // const res = await fetch('https://3878-49-0-88-3.ngrok-free.app/jdj/LineUserID.jsp?userId=thirapat')
-         
-    //   if (res.ok) {
-    //      // const data = await res.json();
-    //     // ใช้ข้อมูลที่ได้รับจากเซิร์ฟเวอร์ได้ที่ตัวแปร data นี้
-    //     console.error('good:');
-    //   } else {
-    //     console.error('เกิดข้อผิดพลาดในการดึงข้อมูล');
-    //   }
-    // } catch (error) {
-    //     console.error('เกิดข้อผิดพลาดระหว่างการดึงข้อมูล:', error);
-    // }
-     //   try {
-     //     const res = await fetch('https://3878-49-0-88-3.ngrok-free.app/jdj/LineUserID.jsp?userId=thirapat')
-     //   } catch (error) {
-
-      //  console.error('Error fetching data:', error); 
-
-    //  }
-          //const res = await fetch('https://3878-49-0-88-3.ngrok-free.app/jdj/LineUserID.jsp?userId=thirapat')
 
     }
 
