--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
   <p id="cusName"><b>ชื่อสมาชิก:</b> </p>
   <p id="cusPhone"><b>เบอร์โทรศัพท์:</b> </p>
   <p id="displayName"><b>คะแนนสะสม:</b> </p>
+
+  <p id="os"><b>OS:</b> </p>
+  <p id="language"><b>Language:</b> </p>
+  <p id="version"><b>Version:</b> </p>
+  <p id="isInClient"><b>isInClient:</b> </p>
+  <p id="accessToken"><b>AccessToken:</b> </p>
+
   <!-- <p id="statusMessage"><b>statusMessage:</b> </p>
   <p id="decodedIDToken"><b>email:</b> </p>
   <p id="type"><b>type:</b> </p>
@@ -122,7 +129,7 @@
       //  getUserProfile()
       //});
 
-     //  getEnvironment();
+       getEnvironment();
        getUserProfile()
       // getContext()
       // getFriendship()
