--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <p id="cusPhone"><b>เบอร์โทรศัพท์:</b> </p>
   <p id="displayName"><b>คะแนนสะสม:</b> </p>
 
+  <p id="lineUserId"><b>UserID:</b> </p>
   <p id="os"><b>OS:</b> </p>
   <p id="language"><b>Language:</b> </p>
   <p id="version"><b>Version:</b> </p>
@@ -78,7 +79,7 @@
       document.getElementById("pictureUrl").src = profile.pictureUrl
      // document.getElementById("pictureUrl").height = "300";
      // document.getElementById("pictureUrl").width = "300";
-      //document.getElementById("userId").append(profile.userId)
+      document.getElementById("lineUserId").append(profile.userId)
       //document.getElementById("statusMessage").append(profile.statusMessage)
      // document.getElementById("displayName").append(profile.displayName)
       
