--- a/index.html
+++ b/index.html
@@ -11,15 +11,10 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <script>
-        try{
+        <div> tttttt </div>
         
-          const res = await fetch("https://49.0.88.3:8100/jdj/Servlet_Coupon_Api")  
-
-
-        if (!res.ok) {
-          console.error('เกิดข้อผิดพลาดในการร้องขอ:', res.status, res.statusText);
-        }
+        <script>
+            const res = await fetch("https://49.0.88.3:8100/jdj/Servlet_Api_Coupon?userId="+userId)     
         </script>
     </body>
 </html>
