--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       var userId = profile.userId
 
       try{
-          const res = await fetch("https://cdc4-49-0-88-3.ngrok-free.app/jdj/Servlet_Api_Coupon?userId="+userId)  
+          const res = await fetch("https://6016-49-0-88-3.ngrok-free.app/jdj/Servlet_Api_Coupon?userId="+userId)  
           //const res = await fetch('http://localhost:8080/jdj/Servlet_Coupon_Api?userId=thirapat')
         if (!res.ok) {
           console.error('เกิดข้อผิดพลาดในการร้องขอ:', res.status, res.statusText);
