--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <p id="cusName"><b>ชื่อสมาชิก:</b> </p>
   <p id="cusPhone"><b>เบอร์โทรศัพท์:</b> </p>
   <p id="displayName"><b>คะแนนสะสม:</b> </p>
+  <p id="lineUserId"><b>userId:</b> </p>
   <!-- <p id="statusMessage"><b>statusMessage:</b> </p>
   <p id="decodedIDToken"><b>email:</b> </p>
   <p id="type"><b>type:</b> </p>
@@ -71,7 +72,7 @@
       document.getElementById("pictureUrl").src = profile.pictureUrl
      // document.getElementById("pictureUrl").height = "300";
      // document.getElementById("pictureUrl").width = "300";
-      //document.getElementById("userId").append(profile.userId)
+      document.getElementById("lineUserId").append(profile.userId)
       //document.getElementById("statusMessage").append(profile.statusMessage)
      // document.getElementById("displayName").append(profile.displayName)
       
