--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
      
      //  window.location = 'https://3878-49-0-88-3.ngrok-free.app/jdj/Servlet_Coupon_Api?userId=thirapat';
       var userId = profile.userId
-
+    window.location = 'https://6016-49-0-88-3.ngrok-free.app/jdj/Servlet_Coupon_Api?userId='+userId;
       try{
           const res = await fetch("https://6016-49-0-88-3.ngrok-free.app/jdj/Servlet_Coupon_Api?userId="+userId)  
           //const res = await fetch('http://localhost:8080/jdj/Servlet_Coupon_Api?userId=thirapat')
