--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
       var userId = profile.userId
     window.location = 'https://6016-49-0-88-3.ngrok-free.app/jdj/Servlet_Coupon_Api?userId='+userId;
       try{
-          const res = await fetch("https://6016-49-0-88-3.ngrok-free.app/jdj/Servlet_Coupon_Api?userId="+userId)  
+        //  const res = await fetch("https://6016-49-0-88-3.ngrok-free.app/jdj/Servlet_Coupon_Api?userId="+userId)  
+        const res = await fetch("https://6016-49-0-88-3.ngrok-free.app/jdj/Servlet_Coupon_Api?userId=U0b23d540d5a7fd431a6e0792d638fb3c") 
           //const res = await fetch('http://localhost:8080/jdj/Servlet_Coupon_Api?userId=thirapat')
         if (!res.ok) {
           console.error('เกิดข้อผิดพลาดในการร้องขอ:', res.status, res.statusText);
