--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
           
           // const myObj = JSON.parse(data);
            
-            document.getElementById("userId").append(data[0].cus_ID);
-            document.getElementById("cusName").append(data[0].cus_Name);
-            document.getElementById("cusPhone").append(data[0].cus_Phone);
-            document.getElementById("displayName").append(data[0].cus_Point);
+         //   document.getElementById("userId").append(data[0].cus_ID);
+          //  document.getElementById("cusName").append(data[0].cus_Name);
+         //   document.getElementById("cusPhone").append(data[0].cus_Phone);
+         //   document.getElementById("displayName").append(data[0].cus_Point);
          //  document.getElementById("displayName").textContent = JSON.stringify(data, null, 2);
 
       } catch (error) {
