--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
           console.error('เกิดข้อผิดพลาดในการร้องขอ 1:', res.status, res.statusText);
         }
 
-           const data = await res.json();
-           console.log('ข้อมูลที่ได้:', data);
+       //    const data = await res.json();
+         //  console.log('ข้อมูลที่ได้:', data);
           
           // const myObj = JSON.parse(data);
            
