--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
         if(res===null){
           console.log('ไม่ได้');
         }else{
+           console.log('ได้');
+          const data = await res.json();
           console.log('ข้อมูลที่ได้:', data);
         }
        //    const data = await res.json();
