--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     async function main() {
       
-      await liff.init({ liffId: "2001362093-0qY6xqp6" })
+  //    await liff.init({ liffId: "2001362093-0qY6xqp6" })
       //liff.ready.then(() => {
       //  getUserProfile()
       //});
