--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       try{
         //  const res = await fetch("https://6016-49-0-88-3.ngrok-free.app/jdj/Servlet_Coupon_Api?userId="+userId)  
-            const res = await fetch("http://49.0.88.3:8090/jdj/Servlet_Coupon_Api?userId="+userId)  
+            const res = await fetch("https://49.0.88.3:8100/jdj/Servlet_Coupon_Api?userId="+userId)  
           //const res = await fetch('http://localhost:8080/jdj/Servlet_Coupon_Api?userId=thirapat')
         if (!res.ok) {
           console.error('เกิดข้อผิดพลาดในการร้องขอ:', res.status, res.statusText);
