--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                            
                          
                          // window.location.href = "frm_register.jsp?userId="+userId;
-                          console.log(('bad')
+                          console.log('bad')
 
                          }else{
                             console.log('ข้อมูลที่ได้:', data);
