--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             console.log('ข้อมูลที่ได้:', data);
               
                             document.getElementById("userId").append(data.cus_ID);
-                      document.getElementById("cusName").append(data.cus_Nam);
+                      document.getElementById("cusName").append(data.cus_Name);
           //  document.getElementById("cusPhone").append(data[0].cus_Phone);
            // document.getElementById("displayName").append(data[0].cus_Point);
                          //   window.location.href = "customer_detail.jsp?userId="+userId;
