--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   
   <img id="pictureUrl" >
-  <p id="userId"><b>รหัสสมาชิก:</b> </p>
+  <p id="userId"><b>รหัสสมาชิก2:</b> </p>
   <p id="cusName"><b>ชื่อสมาชิก:</b> </p>
   <p id="cusPhone"><b>เบอร์โทรศัพท์:</b> </p>
   <p id="displayName"><b>คะแนนสะสม:</b> </p>
@@ -58,7 +58,8 @@
       try{
         //  const res = await fetch("https://2a89-49-0-88-3.ngrok-free.app/jdj/Servlet_Coupon_Api?userId="+userId)  
          // const res = await fetch("https://2a89-49-0-88-3.ngrok-free.app/jdj/Servlet_Coupon_Api?userId="+userId)  
-            const res = await fetch("https://49.0.88.3:8100/jdj/Servlet_Api_Coupon?userId="+userId)  
+            const res = await fetch("https://2a89-49-0-88-3.ngrok-free.app/jdj/Servlet_Api_Coupon?userId="+userId)  
+      //  const res = await fetch("https://49.0.88.3:8100/jdj/Servlet_Api_Coupon?userId="+userId)  
           //const res = await fetch('http://localhost:8080/jdj/Servlet_Coupon_Api?userId=thirapat')
         if (!res.ok) {
           console.error('เกิดข้อผิดพลาดในการร้องขอ:', res.status, res.statusText);
