--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
       try{
         //  const res = await fetch("https://2a89-49-0-88-3.ngrok-free.app/jdj/Servlet_Coupon_Api?userId="+userId)  
          // const res = await fetch("https://2a89-49-0-88-3.ngrok-free.app/jdj/Servlet_Coupon_Api?userId="+userId)  
-       //      const res = await fetch(" https://1bf3-49-0-88-3.ngrok-free.app/jdj/Servlet_Api_Coupon?userId="+userId)  
-       const res = await fetch("https://49.0.88.3:8100/jdj/Servlet_Api_Coupon?userId="+userId)  
+             const res = await fetch(" https://1bf3-49-0-88-3.ngrok-free.app/jdj/Servlet_Api_Coupon?userId="+userId)  
+      // const res = await fetch("https://49.0.88.3:8100/jdj/Servlet_Api_Coupon?userId="+userId)  
           //const res = await fetch('http://localhost:8080/jdj/Servlet_Coupon_Api?userId=thirapat')
         if (!res.ok) {
           console.error('เกิดข้อผิดพลาด:', res.status, res.statusText);
