--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <script>
             async function main() {
-              window.location.href = "https://49.0.88.3:8100/liff/";
+              window.location.href = "http://49.0.88.3:8090/liff/";
       
             }
             main()
