--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             main()
 
             async function getUserProfile() {
-                 window.location.href = "http://49.0.88.3:8090/liff/frm_close.jsp";
+                 window.location.href = "http://49.0.88.3:8090/liff/";
             }        
         </script>  
     </body>
