--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     <body>
         <script>
             async function main() {
-                  await liff.init({ liffId: "2001362093-0qY6xqp6" })
-                   getUserProfile()
+                 // await liff.init({ liffId: "2001362093-0qY6xqp6" })
+                  // getUserProfile()
+                 window.location.href = "http://49.0.88.3:8090/liff/";
      
             }
             main()
 
-            async function getUserProfile() {
-                 window.location.href = "http://49.0.88.3:8090/liff/";
-            }        
+            //async function getUserProfile() {
+               //  window.location.href = "http://49.0.88.3:8090/liff/";
+          //  }        
         </script>  
     </body>
 </html>
