--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             async function main() {
                  // await liff.init({ liffId: "2001362093-0qY6xqp6" })
                   // getUserProfile()
-                 window.location.href = "http://49.0.88.3:8090/liff/";
+                 window.location.href = "http://49.0.88.3:8090/liff/frm_Close.jsp";
      
             }
             main()
