--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
             async function main() {
                  // await liff.init({ liffId: "2001362093-0qY6xqp6" })
                   // getUserProfile()
-                 window.location.href = "http://49.0.88.3:8090/liff/frm_register.jsp";
+                var userId = 'U0b23d540d5a7fd431a6e0792d638fb3c'
+                 window.location.href = "http://49.0.88.3:8090/liff/frm_register.jsp?userId="+userId;
      
             }
             main()
