--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 var userId = profile.userId
                   
               //  var userId = 'U0b23d540d5a7fd431a6e0792d638fb3c'
-                 window.location.href = "http://49.0.88.3:8090/liff/frm_register.jsp?userId="+userId;
+                 window.location.href = "http://49.0.88.3:8090/liff/Servlet_Coupon_Api?userId="+userId;
      
             }
             main()
