--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
               //  var userId = 'U0b23d540d5a7fd431a6e0792d638fb3c'
                //  window.location.href = "http://49.0.88.3:8090/liff/frm_register_authen.jsp?userId="+userId;
                  window.location.href = "http://jordeejing.ddns.net:8090/liff/frm_register_authen.jsp?userId="+userId;
-                 window.close();
+               //  window.close();
             }
             main()
 
