--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
                 await liff.init({ liffId: "2001362093-0qY6xqp6" })
                 const profile = await liff.getProfile()
                 var userId = profile.userId
+                var pictureUrl = profile.pictureUrl
                   
               //  var userId = 'U0b23d540d5a7fd431a6e0792d638fb3c'
                //  window.location.href = "http://49.0.88.3:8090/liff/frm_register_authen.jsp?userId="+userId;
-                 window.location.href = "http://jordeejing.ddns.net:8090/liff/frm_register_authen.jsp?userId="+userId;
+                 window.location.href = "http://jordeejing.ddns.net:8090/liff/frm_register_authen.jsp?userId="+userId+"&pictureUrl="+pictureUrl;
                //  window.close();
             }
             main()
